fix overflow image modal

--- a/src/index.css
+++ b/src/index.css
@@ -161,3 +161,7 @@ html[class='dark'] {
 *:focus {
     outline: none;
 }
+
+.fslightbox-open {
+    overflow: auto !important;
+}
